finalized my design for game

--- a/SIMON_SAYS_MEMORY_GAME/index.html
+++ b/SIMON_SAYS_MEMORY_GAME/index.html
@@ -10,15 +10,15 @@
 <body>
     <!-- make the title of the game -->
 
-    <h1 id="simon"> SIMON</h1>
+    <h1 class="simon"> SIMON</h1>
 <!-- first I create 4 squares  -->
 
-<button class = "Square" id="square"></button>
-<button class = "Square" id="square1"></button>
-<button class = "Square" id="square2"></button>
-<button class = "Square" id="square3"></button>
+<button  class="square"></button>
+<button  class="square1"></button>
+<button  class="square2"></button>
+<button  class="square3"></button>
  
-<button id="button">PLAY</button>
+<button class="button">PLAY</button>
 
 </body>
 <script src = "game.js"></script>
