working on script

--- a/SIMON_SAYS_MEMORY_GAME/index.html
+++ b/SIMON_SAYS_MEMORY_GAME/index.html
@@ -18,7 +18,7 @@
 <button  class="square2"></button>
 <button  class="square3"></button>
  
-<button class="button">PLAY</button>
+<button class="button" onclick="START()">PLAY</button>
 
 </body>
 <script src = "game.js"></script>
