--- a/SIMON_SAYS_MEMORY_GAME/index.html
+++ b/SIMON_SAYS_MEMORY_GAME/index.html
@@ -14,15 +14,13 @@
     <h1 class="simon"> SIMON</h1>
 <!-- first I create 4 squares  -->
 
-<button  class="square"></button>
+<button  class=  "square square-red"></button>
 <button  class="square1"></button>
 <button  class="square2"></button>
 <button  class="square3"></button>
- 
-<button class="button" onclick="START()">PLAY</button>
+<button class="button" onclick="START()" data>PLAY</button>
 
 <script src = "game.js" ></script>
 </body>
-
 
 </html>           
